@@ -116,6 +116,60 @@ int32_t SPVM__Net__SSLeay__X509__digest(SPVM_ENV* env, SPVM_VALUE* stack) {
   return 0;
 }
 
+int32_t SPVM__Net__SSLeay__X509__pubkey_digest(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t error_id = 0;
+  
+  void* obj_self = stack[0].oval;
+  
+  void* obj_type = stack[1].oval;
+  
+  void* obj_md = stack[2].oval;
+  
+  int32_t* len_ref = stack[3].iref;
+  
+  X509* x509 = env->get_pointer(env, stack, obj_self);
+  
+  if (!obj_type) {
+    return env->die(env, stack, "The digest type $type must be defined.", __func__, FILE_NAME, __LINE__);
+  }
+  
+  EVP_MD* type = env->get_pointer(env, stack, obj_type);
+  
+  if (!obj_md) {
+    return env->die(env, stack, "The output buffer $md must be defined.", __func__, FILE_NAME, __LINE__);
+  }
+  
+  int32_t md_length = env->length(env, stack, obj_md);
+  if (!(md_length >= EVP_MAX_MD_SIZE)) {
+    return env->die(env, stack, "The length of output buffer $md must be greater than or equal to EVP_MAX_MD_SIZE.", __func__, FILE_NAME, __LINE__);
+  }
+  
+  char* md = (char*)env->get_chars(env, stack, obj_md);
+  
+  unsigned int len_tmp = 0;
+  int32_t status = X509_pubkey_digest(x509, type, md, &len_tmp);
+  
+  if (!(status == 1)) {
+    int64_t ssl_error = ERR_peek_last_error();
+    
+    char* ssl_error_string = env->get_stack_tmp_buffer(env, stack);
+    ERR_error_string_n(ssl_error, ssl_error_string, SPVM_NATIVE_C_STACK_TMP_BUFFER_SIZE);
+    
+    env->die(env, stack, "[OpenSSL Error]X509_pubkey_digest failed:%s.", ssl_error_string, __func__, FILE_NAME, __LINE__);
+    
+    int32_t error_id = env->get_basic_type_id_by_name(env, stack, "Net::SSLeay::Error", &error_id, __func__, FILE_NAME, __LINE__);
+    
+    return error_id;
+  }
+  
+  *len_ref = len_tmp;
+  
+  stack[0].ival = status;
+  
+  return 0;
+}
+
 int32_t SPVM__Net__SSLeay__X509__DESTROY(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   int32_t error_id = 0;
